# TDF_m33

./: .gitignore  README.md  pyproject.toml
configs/: m33_default.yaml  phase6f_nonspherical_tau_map.yaml
docs/: assumptions_and_limitations.md  baryonic_velocity_derivation_plan.md  corbelli2014_author_request_email.md  cursor_work_log.md  data_acquisition_plan.md  data_sources.md  extraction_log.md  lensing_calibration_and_limits_plan.md  lensing_constraint_source_review.md  lopez_fune_2017_extraction_plan.md  manuscript_allowed_language.md  manuscript_bibliography_verification.md  manuscript_drafting_notes.md  manuscript_figures_and_tables.md  manuscript_outline.md  manuscript_submission_checklist.md  paper_notes.md  phase6f_corbelli_author_request_package.md  phase6f_data_acquisition_plan.md  phase6f_data_gate_report_notes.md  phase6f_data_provenance_checklist.md  phase6f_data_requirements_for_physical_tau_map.md  phase6f_data_tiers.md  phase6f_dataset_access_notes.md  phase6f_mass_constrained_tau_map_protocol.md  phase6f_nonspherical_tau_map_engine.md  phase6f_primary_data_receipt_protocol.md  phase6f_primary_data_requirements.md  phase6f_public_data_acquisition_audit.md  phase6f_public_pilot_download_instructions.md  phase6f_public_pilot_limitations.md  phase6f_source_manifest.md  phase6f_validated_reprojection_design.md  project_plan.md  project_status.md  reproducibility_commands.md  roadmap.md  theory_summary.md
paper/: README.md  m33_tdf_tau_geometry_draft.tex
scripts/: README.md  _bootstrap.py  audit_corbelli2014_fig12_labels.py  audit_lopez_fune_2017_source.py  audit_m33_sources.py  audit_phase6f_public_data_sources.py  (+39 more)
(+220 files in other folders)
